css styling to fix padding and spacing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: "VT323", system-ui, monospace;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     align-items: center;
     justify-content: center;
   }
@@ -30,8 +30,8 @@
     padding: 24px;
     max-width: 330px;
     width: 100%;
-    height: 485px;
-    gap: 30px;
+    height: 455px;
+    gap: 25px;
     display: flex;
     flex-direction: column;
     border-radius: 8px;
@@ -49,7 +49,7 @@
   }
   
   .button {
-    padding: 21px 23px;
+    padding: 20px 23px;
     width: 56px;
     height: 38px;
     cursor: pointer;
@@ -59,7 +59,7 @@
     color: #000000;
     background-color: #fff7d0;
     border-radius: 5px;
-    border: 2px solid rgb(255, 238, 183);
+    border: 1px solid rgb(255, 230, 149);
   }
 
   .extra {
@@ -69,5 +69,5 @@
   }
   
   #instructions p,h1,ol {
-    margin: 12px;
+    margin: 11px;
   }
